--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       <div class="md-list__group">
         <textarea class="md-list__out" name="out" id="out"></textarea>
       </div>
+      <div class="md-list__copyright">
+        Fork me on <a href="https://github.com/aalexeev239/md-list-generator">Github</a>
+      </div>
     </form>
 </div>
 <script src="script.js"></script>
